jien-52 jien-50 added user level systems and added request sanitizations to prevent sql injection

--- a/application/layouts/scripts/admin.phtml
+++ b/application/layouts/scripts/admin.phtml
@@ -37,7 +37,13 @@
           <a class="brand" href="/admin">Admin</a>
           <ul class="nav" id="main_menu">
             <li class="active"><a href="/admin">Home</a></li>
-            <li><a href="/admin/users">Users</a></li>
+            <li>
+            	<a href="#" class="dropdown-toggle">Users</a>
+	            <ul class="dropdown-menu">
+	              	<li><a href="/admin/users">List</a></li>
+	                <li><a href="/admin/userlevels">Levels</a></li>
+	            </ul>
+            </li>
             <li><a href="/admin/posts">Posts</a></li>
             <li><a href="/admin/pages">Pages</a></li>
             <li><a href="/admin/categories">Categories</a></li>
