--- a/application/views/adventure/partials/side.phtml
+++ b/application/views/adventure/partials/side.phtml
@@ -1,5 +1,6 @@
 <?php
 $latestPosts = Jien::model("Post")->byLatest()->limit(5)->getAll();
+$categories = Jien::model("Category")->where("category.type = 'Post'")->orderBy("category.path ASC")->getAll();
 ?>
 
 <span class="colored">CLEAN &amp; SIMPLE TEMPLATE</span>
@@ -15,13 +16,12 @@ $latestPosts = Jien::model("Post")->byLatest()->limit(5)->getAll();
 <h4 class="blog-category">Our Categories</h4>
 <ul class="simple-nav">
 	<!--SIMPLE UL -->
-	<li><a href="about-us.html">Design</a> (21)</li>
-	<li><a href="our-team.html">Programming</a> (28)</li>
-	<li><a href="career.html">Video Manipulation</a> (9)</li>
-	<li><a href="services-item.html">Freebies</a> (32)</li>
-	<li><a href="testimonials.html">Typography</a> (14)</li>
-	<li><a href="blog.html">Inspiration</a> (34)</li>
-	<li><a href="portfolio-four-columns.html">Other Topics</a> (38)</li>
+	<?php
+		foreach($categories->getData() AS $record){
+			$padding = str_repeat('&nbsp;', strlen($record['path']) - 1);
+	?>
+	<li><a href="/blog/?category_id=<?php echo $record['category_id']; ?>"><?php echo $padding; ?> <?php echo $record['category']; ?></a> </li>
+	<?php } ?>
 </ul>
 <div class="horizontal-line">
 </div>
